# Config

./: .gitignore  CMakeLists.txt  README.md
Logger/: CMakeLists.txt
Logger/example/: CMakeLists.txt  vector_example.cpp
Logger/include/: BaseLogger.hpp  Logger.hpp  LoggerErrors.hpp
Logger/src/: BaseLogger.cpp  Logger.cpp  LoggerErrors.cpp
examples/: CMakeLists.txt  config.json  easy_example.cxx
includes/: Config.hpp
src/: Config.cxx
